Fix bugs